# buffr

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  WGPU_PLAN.md  book.toml  config.example.toml
.github/workflows/: aur.yml  ci.yml  docs.yml  release.yml
apps/buffr/: Cargo.toml  README.md  build.rs
apps/buffr-helper/: Cargo.toml  README.md  build.rs
apps/buffr-helper/src/: main.rs
apps/buffr-stub/: Cargo.toml  README.md
apps/buffr-stub/src/: main.rs
apps/buffr/src/: loading_anim.rs  main.rs  render.rs  session.rs  single_instance.rs  wayland_sub.rs
crates/buffr-bookmarks/: Cargo.toml  README.md
crates/buffr-bookmarks/src/: lib.rs  schema.rs
crates/buffr-config/: Cargo.toml  README.md
crates/buffr-config/src/: keybinding.rs  lib.rs  loader.rs  search.rs  watcher.rs
crates/buffr-core/src/: app.rs
crates/buffr-history/: Cargo.toml  README.md
crates/buffr-history/src/: lib.rs  schema.rs
crates/buffr-modal/: Cargo.toml  README.md
crates/buffr-modal/src/: actions.rs  defaults.rs  edit_mode.rs  engine.rs  host.rs  key.rs  keymap.rs  lib.rs  trie.rs  winit_adapter.rs
crates/buffr-ui/: Cargo.toml  README.md
crates/buffr-ui/src/: confirm_prompt.rs  download_notice.rs  font.rs  input_bar.rs  lib.rs  permissions_prompt.rs  tab_strip.rs
crates/buffr-zoom/: Cargo.toml  README.md
crates/buffr-zoom/src/: lib.rs  schema.rs
docs/: README.md  SUMMARY.md  accessibility.md  config.md  dev.md  hint-mode.md  keymap.md  macos-running.md  macos-signing.md  multi-tab.md  packaging.md  privacy.md  ui-stack.md  updates.md  windows-packaging.md
flatpak/: buffr-launcher  sh.kryptic.buffr.desktop  sh.kryptic.buffr.metainfo.xml  sh.kryptic.buffr.yml
pkg/: buffr.desktop
pkg/aur/: PKGBUILD  PKGBUILD-bin.in
snap/: snapcraft.yaml
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/templates/: AppRun  PKGBUILD.in  buffr.spec.in  buffr.wxs  deb.control  deb.postinst  deb.prerm  helper-gpu.plist  helper-plugin.plist  helper-renderer.plist  helper.plist  main.plist
