[workspace]
resolver = "2"
members = [
    "crates/buffr-core",
    "crates/buffr-modal",
    "crates/buffr-ui",
    "crates/buffr-config",
    "crates/buffr-history",
    "apps/buffr",
    "apps/buffr-helper",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kryptic-sh/buffr"
homepage = "https://kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]

[workspace.dependencies]
cef = "147"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
bitflags = "2"
toml = "0.8"
directories = "5"
winit = "0.30"
raw-window-handle = "0.6"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
bzip2 = "0.4"
clap = { version = "4", features = ["derive"] }
notify = "6"
# History store deps. `rusqlite`'s `bundled` feature is opted-in by
# `buffr-history` — we expose the workspace base here without features
# so other crates can later pick a different bundling mode if needed.
rusqlite = "0.31"
chrono = { version = "0.4", default-features = false }
url = "2"

buffr-core = { path = "crates/buffr-core" }
buffr-modal = { path = "crates/buffr-modal" }
buffr-ui = { path = "crates/buffr-ui" }
buffr-config = { path = "crates/buffr-config" }
buffr-history = { path = "crates/buffr-history" }

# Vim engine + rope buffer extracted into a standalone repo. Pinned
# exact via "=0.0.x" until hjkl 0.1.0 stabilises — lockstep churn means
# breaking changes can land on patch bumps.
hjkl-engine = "=0.0.4"
hjkl-buffer = "=0.0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
