[workspace]
resolver = "2"
members = [
    "crates/buffr-core",
    "crates/buffr-modal",
    "crates/buffr-ui",
    "crates/buffr-config",
    "crates/buffr-history",
    "crates/buffr-bookmarks",
    "crates/buffr-downloads",
    "crates/buffr-zoom",
    "crates/buffr-permissions",
    "apps/buffr",
    "apps/buffr-helper",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kryptic-sh/buffr"
homepage = "https://kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]

[workspace.dependencies]
cef = "147"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
bitflags = "2"
toml = "0.8"
directories = "5"
winit = "0.30"
raw-window-handle = "0.6"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
bzip2 = "0.4"
clap = { version = "4", features = ["derive"] }
notify = "6"
# History store deps. `rusqlite`'s `bundled` feature is opted-in by
# `buffr-history` — we expose the workspace base here without features
# so other crates can later pick a different bundling mode if needed.
rusqlite = "0.31"
chrono = { version = "0.4", default-features = false }
url = "2"
# Used by `buffr-bookmarks` for Netscape HTML import. Format is loose
# enough that pulling a real HTML parser would be overkill.
regex = "1"
# Ephemeral profile dir for `--private` mode. The TempDir's Drop
# tears the tree down at process exit so no state persists.
tempfile = "3"
# Phase 3 chrome — software-blit bitmap surface for the statusline strip
# below the CEF child window. No GPU dependency; drawing is a per-pixel
# `&mut [u32]` blit driven by the bitmap font in `buffr-ui::font`.
softbuffer = "0.4"
# Phase 6 update channel: `UpdateChecker` compares the running version
# against GitHub releases. SemVer parsing handles rc/beta suffixes.
semver = { version = "1", features = ["serde"] }

buffr-core = { path = "crates/buffr-core" }
buffr-modal = { path = "crates/buffr-modal" }
buffr-ui = { path = "crates/buffr-ui" }
buffr-config = { path = "crates/buffr-config" }
buffr-history = { path = "crates/buffr-history" }
buffr-bookmarks = { path = "crates/buffr-bookmarks" }
buffr-downloads = { path = "crates/buffr-downloads" }
buffr-zoom = { path = "crates/buffr-zoom" }
buffr-permissions = { path = "crates/buffr-permissions" }

# Vim engine + rope buffer extracted into a standalone repo. Pinned
# exact via "=0.0.x" until hjkl 0.1.0 stabilises — lockstep churn means
# breaking changes can land on patch bumps.
hjkl-engine = "=0.0.38"
hjkl-buffer = "=0.0.38"

# Local-dev override: point hjkl-* crates at the in-tree checkout so
# we can iterate against unreleased changes without waiting on the
# crates.io publish rate limit. Comment out once the matching tag
# publishes and the pin catches up.
[patch.crates-io]
hjkl-buffer = { path = "../hjkl/crates/hjkl-buffer" }
hjkl-engine = { path = "../hjkl/crates/hjkl-engine" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
