[workspace]
resolver = "2"
members = [
    "crates/buffr-core",
    "crates/buffr-modal",
    "crates/buffr-ui",
    "crates/buffr-config",
    "crates/buffr-history",
    "crates/buffr-bookmarks",
    "crates/buffr-downloads",
    "crates/buffr-zoom",
    "crates/buffr-permissions",
    "apps/buffr",
    "apps/buffr-helper",
    "xtask",
]
# `apps/buffr-stub` is intentionally *not* a workspace member. It's the
# crates.io-published stub that owns the `buffr` package name, and its
# bin output filename collides with `apps/buffr` (the real binary). Keep
# it out of `cargo build --workspace` paths and publish it independently:
#   cargo publish --manifest-path apps/buffr-stub/Cargo.toml --locked
exclude = ["apps/buffr-stub"]
default-members = ["apps/buffr"]

[workspace.package]
version = "0.1.6"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kryptic-sh/buffr"
homepage = "https://kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]

[workspace.dependencies]
cef = "147"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
bitflags = "2"
toml = "1.1"
directories = "6"
winit = "0.30"
raw-window-handle = "0.6"
ureq = { version = "3", features = ["json"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
bzip2 = "0.6"
clap = { version = "4", features = ["derive"] }
notify = "8"
# History store deps. `rusqlite`'s `bundled` feature is opted-in by
# `buffr-history` — we expose the workspace base here without features
# so other crates can later pick a different bundling mode if needed.
rusqlite = "0.39"
chrono = { version = "0.4", default-features = false }
url = "2"
# Used by `buffr-bookmarks` for Netscape HTML import. Format is loose
# enough that pulling a real HTML parser would be overkill.
regex = "1"
# Ephemeral profile dir for `--private` mode. The TempDir's Drop
# tears the tree down at process exit so no state persists.
tempfile = "3"
# Phase 3 chrome — software-blit bitmap surface for the statusline strip
# below the CEF child window. No GPU dependency; drawing is a per-pixel
# `&mut [u32]` blit driven by the bitmap font in `buffr-ui::font`.
softbuffer = "0.4"
# wgpu present layer — replaces softbuffer in apps/buffr. CPU-composite
# buffer is uploaded to a single GPU texture and drawn as a fullscreen
# triangle. No platform branching: Vulkan on Linux, Metal on macOS, DX12.
wgpu = "22"
# block_on for async adapter / device request
pollster = "0.3"
# safe cast from &[u32] to &[u8] for texture upload
bytemuck = { version = "1", features = ["derive"] }
# Phase 6 update channel: `UpdateChecker` compares the running version
# against GitHub releases. SemVer parsing handles rc/beta suffixes.
semver = { version = "1", features = ["serde"] }

buffr-core = { path = "crates/buffr-core", version = "0.1" }
buffr-modal = { path = "crates/buffr-modal", version = "0.1" }
buffr-ui = { path = "crates/buffr-ui", version = "0.1" }
buffr-config = { path = "crates/buffr-config", version = "0.1" }
buffr-history = { path = "crates/buffr-history", version = "0.1" }
buffr-bookmarks = { path = "crates/buffr-bookmarks", version = "0.1" }
buffr-downloads = { path = "crates/buffr-downloads", version = "0.1" }
buffr-zoom = { path = "crates/buffr-zoom", version = "0.1" }
buffr-permissions = { path = "crates/buffr-permissions", version = "0.1" }

# Vim engine + rope buffer extracted into standalone repos. Caret-pinned
# at 0.1 / 0.3 — patch bumps roll in automatically via workspace member
# resolution; major-bump breakage is gated by the leading-zero version.
hjkl-engine = "0.1"
hjkl-buffer = "0.1"
hjkl-clipboard = "0.3"

# Force every transitive crates.io reference to a buffr-* crate to
# resolve to the workspace member at crates/<name>/ (a submodule). The
# submodule Cargo.tomls list deps as plain registry pins
# (e.g. `buffr-modal = "0.1"`) for standalone CI; without these patches
# cargo would mix the registry copy with the workspace member, producing
# `multiple different versions of crate buffr_<name>` build errors.
[patch.crates-io]
buffr-bookmarks = { path = "crates/buffr-bookmarks" }
buffr-config = { path = "crates/buffr-config" }
buffr-core = { path = "crates/buffr-core" }
buffr-downloads = { path = "crates/buffr-downloads" }
buffr-history = { path = "crates/buffr-history" }
buffr-modal = { path = "crates/buffr-modal" }
buffr-permissions = { path = "crates/buffr-permissions" }
buffr-ui = { path = "crates/buffr-ui" }
buffr-zoom = { path = "crates/buffr-zoom" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
