[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Build automation tasks for buffr (cargo xtask ...)."
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
bzip2.workspace = true
