[package]
name = "buffr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Vim-inspired browser. Native, GPU-accelerated. Rust + CEF."

[[bin]]
name = "buffr"
path = "src/main.rs"

[features]
default = []
# Forwards to `buffr-core/osr`. Enables native Wayland via off-screen
# rendering once Phase 3 lands; default builds use windowed embedding
# (XWayland on Wayland sessions).
osr = ["buffr-core/osr"]

[dependencies]
buffr-core.workspace = true
buffr-history.workspace = true
buffr-bookmarks.workspace = true
buffr-downloads.workspace = true
buffr-zoom.workspace = true
# Enable the `winit` feature so we can pull in
# `buffr_modal::key_event_to_chord` to translate winit key events into
# our internal chord type without re-implementing the mapping.
buffr-modal = { workspace = true, features = ["winit"] }
buffr-ui.workspace = true
buffr-config.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cef.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
clap.workspace = true
tempfile.workspace = true
