[package]
name = "buffr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Vim-inspired browser. Native, GPU-accelerated. Rust + CEF."

[[bin]]
name = "buffr"
path = "src/main.rs"


[dependencies]
buffr-core.workspace = true
buffr-history.workspace = true
buffr-bookmarks.workspace = true
buffr-downloads.workspace = true
buffr-zoom.workspace = true
buffr-permissions.workspace = true
# Enable the `winit` feature so we can pull in
# `buffr_modal::key_event_to_chord` to translate winit key events into
# our internal chord type without re-implementing the mapping.
buffr-modal = { workspace = true, features = ["winit"] }
buffr-ui.workspace = true
buffr-config.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cef.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
clap.workspace = true
tempfile.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
serde.workspace = true
serde_json.workspace = true
ctrlc = "3.5.2"
