[package]
name = "buffr-modal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Vim-style modal keybinding engine for buffr."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }

# Edit-mode delegates to hjkl-engine against a mirrored Rope synced to
# the DOM via CEF. Local path dep until hjkl 0.1.0 ships; lockstep churn
# means breaking changes can land on patch bumps.
hjkl-engine = { workspace = true }
hjkl-buffer = { workspace = true }

# crossterm KeyEvent is the engine's input type today; the host
# bridges from CEF browser keys into it. When trait extraction lands a
# host-native Input enum, this dep moves out.
crossterm = "0.28.1"
