[package]
name = "buffr-modal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Vim-style modal keybinding engine for buffr."

[features]
default = []
# Bring in the winit `KeyEvent` → `KeyChord` adapter so `apps/buffr` can
# wire raw key events into the engine without re-implementing the
# mapping. Optional because the engine itself is winit-agnostic.
winit = ["dep:winit"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
bitflags = { workspace = true }

# Edit-mode delegates to hjkl-engine against a mirrored Rope synced to
# the DOM via CEF. hjkl 0.1.0 froze the SPEC trait surface; the
# `Editor<B, H>` generic now binds `BuffrHost` directly without the
# pre-0.1.0 dyn-host shim.
hjkl-engine = { workspace = true }
hjkl-buffer = { workspace = true }

# crossterm KeyEvent is the engine's input type today; the host
# bridges from CEF browser keys into it. When trait extraction lands a
# host-native Input enum, this dep moves out.
crossterm = "0.28.1"

# Optional: only enabled by the `winit` feature. Used by the
# `winit_adapter` module that converts `winit::event::KeyEvent` into
# our internal `KeyChord`. The engine itself stays winit-agnostic.
winit = { workspace = true, optional = true }

[dev-dependencies]
toml.workspace = true
